Fix: Adjust panel context positioning and z-index

--- a/packages/common/components/ui/panel-context/panel-context.css
+++ b/packages/common/components/ui/panel-context/panel-context.css
@@ -36,8 +36,10 @@
         flex-shrink: 0;
         margin: var(--spacer-05) auto var(--spacer-05) var(--spacer-2);
         pointer-events: auto;
-        position: relative;
-        z-index: 100001;
+        position: absolute;
+        right: var(--spacer-05);
+        top: var(--spacer-05);
+        z-index: 100001 !important;
     }
 
     .resize-handle {
@@ -82,12 +84,15 @@
 
         .c-button.variant-toggle {
             align-self: center;
-            margin: var(--spacer-05) auto;
+            bottom: var(--spacer-05);
+            left: 50%;
+            margin: 0;
             max-width: calc(100% - var(--spacer-1));
             pointer-events: auto;
-            position: relative;
+            position: absolute;
+            transform: translateX(-50%);
             width: auto;
-            z-index: 100001;
+            z-index: 100001 !important;
         }
     }
 
